// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`failing createOne FieldMetadataService morph relation fields v2 Morh relation collision tests suite it should fail to create a already existing morph relation with samefield 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "toto" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "toto" is not available as it is already used by another field",
              "value": "toto",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "toto",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "tata" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "tata" is not available as it is already used by another field",
              "value": "tata",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "tata",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_4a59b92546a3dbf54abee51283a",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_247f630f4f88242063a98b01371",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 2 fieldMetadatas, 2 indexs",
    "summary": {
      "fieldMetadata": 2,
      "index": 2,
      "totalErrors": 4,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 Morh relation collision tests suite it should fail to create a field with name than result in existing morph relation field join column 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "fieldNamePersonForMorphRelationSecondId" is not available as it is already used by another join column name",
              "userFriendlyMessage": "Name "fieldNamePersonForMorphRelationSecondId" is not available as it is already used by join column name",
              "value": "fieldNamePersonForMorphRelationSecondId",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "fieldNamePersonForMorphRelationSecondId",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field on source object itself 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Source object cannot be the target object",
              "userFriendlyMessage": "Source object cannot be the target object",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "fieldNameCompaniesForMorphRelationSecond",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
        {
          "errors": [
            {
              "code": "FIELD_METADATA_NOT_FOUND",
              "message": "Relation field target metadata not found in both existing and about to be created field metadatas",
              "userFriendlyMessage": "Relation field target metadata not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "tata",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_7cde21773589fbdb09355f3444c",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 2 fieldMetadatas, 1 index",
    "summary": {
      "fieldMetadata": 2,
      "index": 1,
      "totalErrors": 3,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field that has several references to same object 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads must have only relation to the same object metadata",
              "userFriendlyMessage": "An error occurred.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when targetFieldLabel contains only whitespace 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_c1add8eb2b51d67721916a3e5a9",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 index",
    "summary": {
      "fieldMetadata": 1,
      "index": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when targetFieldLabel exceeds maximum length 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too long",
              "userFriendlyMessage": "Name is too long",
              "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_c84138bdf8bc3889ef56273281e",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 index",
    "summary": {
      "fieldMetadata": 1,
      "index": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when targetFieldLabel has a first degree conflicts with an existing field on target object metadata id 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "NOT_AVAILABLE",
              "message": "Name "name" is not available as it is already used by another field",
              "userFriendlyMessage": "Name "name" is not available as it is already used by another field",
              "value": "name",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "name",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_e07d8240883043fcb1ad1ba0324",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 index",
    "summary": {
      "fieldMetadata": 1,
      "index": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when targetFieldLabel is empty 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is too short",
              "userFriendlyMessage": "Name is too short",
              "value": "",
            },
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "userFriendlyMessage": "Name is not valid: it must start with lowercase letter and contain only alphanumeric letters",
              "value": "",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "",
            "objectMetadataUniversalIdentifier": Any<String>,
            "universalIdentifier": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "status": "fail",
          "type": "create",
        },
      ],
      "index": [
        {
          "errors": [
            {
              "code": "INDEX_FIELD_NOT_FOUND",
              "message": "Could not find index field related field metadata",
              "userFriendlyMessage": "Field referenced in index does not exist",
            },
          ],
          "flatEntityMinimalInformation": {
            "name": "IDX_c1add8eb2b51d67721916a3e5a9",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "index",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata, 1 index",
    "summary": {
      "fieldMetadata": 1,
      "index": 1,
      "totalErrors": 2,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating fields",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when targetObjectMetadataId is unknown 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation input transpilation failed",
              "userFriendlyMessage": "Invalid morph relation input",
              "value": [
                {
                  "targetFieldIcon": "Icon123",
                  "targetFieldLabel": "test",
                  "targetObjectMetadataId": Any<String>,
                  "type": "ONE_TO_MANY",
                },
              ],
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when type is a wrong value 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation input transpilation failed",
              "userFriendlyMessage": "Invalid morph relation input",
              "value": [
                {
                  "targetFieldIcon": "Icon123",
                  "targetFieldLabel": "test",
                  "targetObjectMetadataId": Any<String>,
                  "type": "wrong",
                },
              ],
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field when type is not provided 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation input transpilation failed",
              "userFriendlyMessage": "Invalid morph relation input",
              "value": [
                {
                  "targetFieldIcon": "Icon123",
                  "targetFieldLabel": "test",
                  "targetObjectMetadataId": Any<String>,
                },
              ],
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with empty morphRelationCreationPayload 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads are empty",
              "userFriendlyMessage": "At least one relation is require",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with malformed morphRelationCreationPayload occurrence 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads must have the same relation type",
              "userFriendlyMessage": "An error occurred.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with many relation types 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads must have the same relation type",
              "userFriendlyMessage": "An error occurred.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with not an array morphRelationCreationPayload 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation input transpilation failed",
              "userFriendlyMessage": "Invalid morph relation input",
              "value": [
                "not-an-array",
              ],
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with null morphRelationCreationPayload 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Relation creation payload is required",
              "userFriendlyMessage": "Relation creation payload is required",
              "value": null,
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 it should fail to create a MORPH_RELATION field with undefined morphRelationCreationPayload 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "INVALID_FIELD_INPUT",
              "message": "Relation creation payload is required",
              "userFriendlyMessage": "Relation creation payload is required",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
          },
          "metadataName": "fieldMetadata",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 fieldMetadata",
    "summary": {
      "fieldMetadata": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;
